--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -119,59 +119,7 @@
           font-size: 35px;
       }
   }
-
-
-
-  
-  /*
-  .foottext {
-    padding-left:50px;
-    color:#E0EBF4;
-    font-size:35px;
-  }
-  #rightdiv {
-    margin-top:1%;
-    width:20%;
-    position:absolute;
-    right:20px;
-    top:10px;
-  }
-  #righttext {
-    margin-top:15%;
-  }
-  .imgtxt {
-    color:#E0EBF4;
-    font-size:25px;
-    text-align:right;
-  }
- 
-  form {
-    margin-left:10%;
-  }
-  .form-group {
-    width:65%;
-  }
-  .form-group label {
-    text-align:left;
-    color:#16487E;
-    margin-bottom:10px;
-  }
-  .form-control {
-    width:30%;
-    float:right;
-    color:#16487E;
-    text-align:right;
-  }
-  
-  .margleft label {
-      padding-left: 35px;
-      width: 50%;
-      text-align: right;
-  }
-  .margleft .form-control {
-      width: 20%;
-  }
-  .topMenu {
+  .topNavigation {
     position: absolute;
     top: 10px;
     left: 40%;
@@ -182,22 +130,6 @@
     color: black;
     box-shadow: 0px 1px 5px #343;
   }
-  .topMenu:hover {
+  .topNavigation:hover {
     background:#DFDFDF;
-  }*/
-  
-  /* animatiosn 
-  #form1 {
-    transition:all linear 0.3s;
   }
-  #form2 {
-    transition:all linear 0.3s;
-  }
-  #form1.ng-hide, #form2.ng-hide {
-    opacity:0;
-    transform: scale(0.1);
-  }
-  
-  /* input colors */
-  
-  
